docs(readme): Java 21, desktop Skiko/Dock, JDK 24 y artefactos de release
Made-with: Cursor